# Taxi-Fare-Prediction

./: .flake8  .pre-commit-config.yaml  README.md  environment.yml  problem.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
data/: Precipitations_May_2022.csv
data/Point_Of_Interest/: Point_Of_Interest.sbn  Point_Of_Interest.sbx  Point_Of_Interest.shp  Point_Of_Interest.shp.xml  Point_Of_Interest.shx  attributes.json
submissions/starting_kit/: estimator.py
