[tool.poetry]
name = "taxi-fare-prediction"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
numpy = "^1.23.5"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
ydata-profiling = "^4.0.0"
geopandas = "^0.12.2"
folium = "^0.14.0"
mapclassify = "^2.5.0"
geopy = "^2.3.0"
tqdm = "^4.64.1"
contextily = "^1.3.0"
pyarrow = "^11.0.0"
fastparquet = "^2023.2.0"
networkx = "^3.0"
holidays = "^0.20"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
black = {extras = ["jupyter"], version = "^23.1.0"}
pre-commit = "^3.0.4"
ipykernel = "^6.21.2"
ipywidgets = ">=7.0,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
